# pgparse

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  bootstrap  justfile  mkdocs.yml  pgparse.c  pgparse.pyx  pgparse_proto.py  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: deploy.yaml  docs.yaml  testing.yaml
ci/: test.sh
docs/: api.md  api.rst  conf.py  examples.md  examples.rst  exceptions.rst  history.md  history.rst  index.md  index.rst
pgparse/: __init__.py
requires/: docs.txt  testing.txt
tests/: test_deparse_protobuf.py  test_fingerprint.py  test_normalize.py  test_parse.py  test_parse_plpgsql.py  test_parse_protobuf.py
