[build-system]
requires = ["setuptools>=72", "cython>=3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgparse"
version = "17.6.2.2"
description = "Python wrapper for libpg_query"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Gavin M. Roy", email = "gavinmroy@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/gmr/pgparse"

[dependency-groups]
dev = [
    "build",
    "coverage[toml]",
    "cython>=3",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs>=1.5,<2",
    "mkdocs-material>9.5,<10",
    "mkdocstrings[python]>=0.26,<0.27",
    "mkdocstrings-python-xref>=1.6,<2",
]

[tool.coverage.html]
directory = "build/coverage"

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["pgparse"]

[tool.coverage.xml]
output = "build/coverage.xml"

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = ["tests"]

[tool.mkdocs]
config-file = "mkdocs.yml"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "BLE",      # flake8-blind-except
    "C4",       # flake8-comprehensions
    "C90",      # mccabe
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "G",        # flake8-logging-format
    "I",        # isort
    "N",        # pep8-naming
    "Q",        # flake8-quotes
    "S",        # flake8-bandit
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "DTZ",      # flake8-datetimez
    "FURB",     # refurb
    "RUF",      # ruff-specific
    "T20",      # flake8-print
    "UP",       # pyupgrade
]
ignore = [
    "E501",     # line too long
    "N818",     # exception class names are not required to end in Error
    "RSE",      # contradicts Python Style Guide
    "UP040",    # allow non-pep695-type-alias
]
flake8-quotes = { inline-quotes = "single" }

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]
