[metadata]
name = pgparse
version = attr: pgparse.version
description = Python wrapper for libpg_query
long_description = file: README.rst
license = BSD 3-Clause License
url = https://github.com/gmr/pgparse
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Database
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    cython
packages = pgparse
zip_safe = True

[options.package_data]
* = LICENSE, README.rst

[build_sphinx]
all-files = 1

[coverage:run]
branch = True
data_file = build/.coverage

[flake8]
application-import-names = pgparse
exclude = build,ci,env
import-order-style = google

[mypy]
ignore_errors = True

[mypy-pgparse]
ignore_errors = True

[nosetests]
cover-branches = 1
cover-html = true
cover-html-dir = build/coverage
cover-package = pgparse
cover-xml = true
cover-xml-file = build/coverage.xml
logging-level = DEBUG
verbosity = 2
with-coverage = 1
with-xunit = true
xunit-file = build/nosetests.xml
