[metadata]
name = pgparse
version = 0.3.0
description = Python wrapper for libpg_query
long_description = file: README.rst
license = BSD 3-Clause License
url = https://github.com/gmr/pgparse
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Database
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = True

[options.package_data]
* = LICENSE, README.rst

[build_sphinx]
all-files = 1

[coverage:run]
branch = True
plugins = Cython.Coverage

[flake8]
application-import-names = pgparse
exclude = build,ci,env
import-order-style = google

[mypy]
ignore_errors = True

[mypy-pgparse]
ignore_errors = True
